--- a/src/app/product-tracklisting/product-tracklisting.component.css
+++ b/src/app/product-tracklisting/product-tracklisting.component.css
@@ -2,13 +2,13 @@
     font-size: 16px;
     padding-top: 10px;
 }
-.ul{
+ul{
     list-style-type: none;
 }
-.l1{
+li{
     display: block;
     line-height: 30px;
 }
-.button{
+button{
     line-height: 1;
 }
