--- a/src/app/product-tracklisting/product-tracklisting.component.html
+++ b/src/app/product-tracklisting/product-tracklisting.component.html
@@ -1,9 +1,8 @@
 
- <div class="row">
-  <div class="col-sm-8">
+
     <div class="row tracklisting">
       <ul>
-        <li ngFor="let track of albumInfo?.album.tracks">
+        <li *ngFor="let track of albumInfo?.album.tracks">
           <div class="col-sm-5">
             <span class="track-number">{{track.trackNumber}}</span>
             <span class="track-name">{{track.trackName}}</span>
@@ -15,5 +14,4 @@
         </li>
       </ul>
      </div>
-    </div>
- </div>
+   
